2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GNUmakefile: build subproject.
	* Source/Additions/Makefile.preamble: set include flags.
	* Source/Additions/GSXML.m: moved implementation here.
	* Source/Additions/GSMime.m: moved implementation here.
	* Source/GNUmakefile: build subproject.

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile: build SSL aggregate project
	* config.mak.in: Remove SSL info
	* configure.in: Remove SSL configuration
	* configure: Regenerate
	* SSL/GNUmakefile: Build SSL bundle
	* SSL/GSUnixSSLHandle.m: SSL bundle source from Source directory
	* SSL/Makefile.postamble: Build SSL bundle
	* SSL/Makefile.preamble: Build SSL bundle
	* SSL/config.h.in: Trivial config for SSL bundle
	* SSL/config.mak.in: SSL info for building bundle.
	* SSL/configure.in: Configuration for SSKL bundle.
	* Source/GNUmakefile: Don't build SSL bundle.
	* Source/GSUnixSSLHandle.m: Moved to SSL directory.
	* Source/Makefile.postamble: Don't build SSL bundle.
	* Source/Makefile.preamble: Don't build SSL bundle.
	Alterations to make the SSL bundle capable of standalone
	building - for use on systems where the base package has
	only been installed in binary form.
	Initial attempt!

2002-03-06  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSAttributedString.m: Applied fix for left-over attributes
	at end of string.  Patch supplied by Alexander Malmberg
	<alexander@malmberg.org>.  Reformatting to conform to GNUstep
	standards, and optimisation by me.

2002-03-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/autogsdoc.m: Output gsdoc as UTF8 as we should.
	* Tools/AGSOutput.m: ditto.

2002-03-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: When reading .GNUsteprc, if a per user version is
	not available, use the one in the configured system root directory.

2002-02-28  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: Add objc-runtime.h