@@ -44,7 +44,9 @@
 - (void) setDirectory: (NSString*)path;
 - (void) setGlobalRef: (NSString*)ref type: (NSString*)type;
 - (void) setRelationship: (NSString*)r from: (NSString*)from to: (NSString*)to;
+- (void) setSources: (NSArray*)a forHeader: (NSString*)h;
 - (void) setUnitRef: (NSString*)ref type: (NSString*)type;
+- (NSArray*) sourcesForHeader: (NSString*)h;
 - (NSDictionary*) unitRef: (NSString*)ref type: (NSString*)type;
 - (NSString*) unitRef: (NSString*)ref type: (NSString*)type unit: (NSString**)u;
 @end
